xx Aug 2008: 0.6.2 Miek <miek@miek.nl>
 * rdup: Added -R switch, which will reverse rdup's output
   This is a depth first output, first the directories
   then the files.
 * rdup: Use libpcre3 for regular expressions, MUCH much more powerfull
   than the POSIX regex previously used. This does add an extra
   dependency for libpcre3 (requested by Sorin Ionescu)
 * rdup: support for named pipe's, sockets and character and
   block devices. The rdup-utils IGNORE these files.
   This overloads the size (%s) in case of block/character
   devices - then it is major,minor number
 * rdup: always write the device out with 5 position for the 
   internal filelist. This could also have resulted in too large 
   incrementals
 * rdup-utils: check if a file is encrypted/compressed before
   decrypting/decompressing it.
 * rdup-utils: rdup-snap-link will now check if its called from
   rdup-simple. Dropped the manpage for rdup-snap-link


31 Jul 2008: 0.6.1 Miek <miek@miek.nl>
 * Added support for amazon's S3 service: see s3-rdup
   this is not added to rdup-simple and probably never will,
   but examples are given in the manual page on how
   to use it.
 * crawler.c: removed new_dir argument for dir_crawl
   this would test if a directory is new and if so would
   include all the files in it. This did not work properly
   and would result into files being included in the backup, which 
   would otherwise would be skipped when doing an incremental
   (Louis-Dominique Dubeau)
 * debian/ directory erased as rdup is now included in Debian and there 
   are better working builds for Ubuntu on Launchpad
 * Remove translation stuff from Perl utils - Perl 5.10 has a
   problem with the hack I employed. Thanks to Dawid Ciezarkiewicz
   for lending his machine with Arch Linux (and Perl 5.10)
 * Remove the -a flag from rdup and all the utils. Never like this hack anyway.


29 May 2008: 0.6.0 Miek <miek@miek.nl>
 -- 0.6.0 is 0.6.0-rc1 with following tweaks --